			     BZFlag Release Notes
			     ====================

BZFlag 2.3.0  "Born Again"
----------------------------------------
* Add ricochet on a per object basis for .bzw files - David Anderson
* serverControl plugin- Add option to ignore observers for server shutdowns
* serverControl plugin- Only report ban file access errors once
* serverControl plugin- Limit filesystem checks to once every 3 seconds
* LogDetail plugin-Add SERVER-MAPNAME with the public server description
* The bzfs -time command line option allows end time - Scott Wichser, Ian Agar
* screenshots now compressed asynchronously - Daniel Remenak, randomparticle
* Add /serverdebug command and plugin API - Bernt Hansen
* Add bzfs -utc command line option to log timestampes universal time - Bernt Hansen
* Fix buffer overrun when using -ts micros on Linux - trepan, Bernt Hansen
* Only players with POLL permission are eligible to vote - Bernt Hansen
* Only allow a single end shot credit for holding the shield flag - Bernt Hansen
* Do not inform hunters of stealthy prey - Ian Agar
* All scores are controlled completely by the server - Daniel Remenak
* "I think this is where we came in."


BZFlag 2.0.16  "No Foolin'" (2010-04-01)
----------------------------------------

* Fix command line options in Windows launcher - Scott Wichser
* Fix regression in protocol handling by server - Jeff Makey, Scott Wichser
* Add bullet tails as seen out the viewport - trepan
* Add observer mouse controls for roaming and tracking modes - trepan
* Add the /forceradar client-side command for observers - trepan
* Minor cleanup of source and build system - Jeff Makey
* Explicitly link to the dl library when needed - Jeff Makey
* Remove unused dependency on Xi library - Jeff Makey
* Clarify copyright assignment terms for developers - Jeff Myers
* Allow only one Enter message per player instance - Jeff Makey
* Add TimeLimit plugin - Steven Mertens
* Remove broken vocaliser and obsolete torBlock plugins - Jeff Myers

